# Reed

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  README.md  ROADMAP.md  findings.md  pyproject.toml  readit  readit.py  reed.py  test_readit.py  test_reed.py
.github/workflows/: publish.yml  tests.yml
readit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
