[project]
name = "readit"
version = "0.1.0"
description = "A CLI that reads text aloud using piper-tts"
requires-python = ">=3.14"
dependencies = [
    "piper-tts",
    "prompt-toolkit",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
]

[tool.setuptools]
py-modules = ["readit"]

[project.scripts]
readit = "readit:main"

[tool.pytest.ini_options]
testpaths = ["."]
