[project]
name = "reedy"
version = "0.1.0"
description = "A CLI that reads text aloud using piper-tts"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "piper-tts",
    "pathvalidate",
    "prompt-toolkit",
    "rich",
]

[dependency-groups]
test = [
    "pytest>=9.0.2",
]
lint = [
    "mypy>=1.19.1",
    "ruff>=0.14.1",
]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    "pre-commit>=4.5.1",
]

[tool.setuptools]
py-modules = ["reed"]

[project.scripts]
reed = "reed:main"

[tool.pytest.ini_options]
testpaths = ["."]
